discussion/kv_engine/178487/178487_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52953: WIP - remove EPStats::replicationThrottleThreshold

Change-Id: I3c3ccbea4632a70bb27bb664ae16e8b9a494c903

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-04 15:29:48.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-04 17:17:11.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19246/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42: error: member access into incomplete type "const KVBucket" [clang-diagnostic-error]
    return memoryUsed <= maxSize * bucket->getMutationMemRatio();
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:45:7: note: forward declaration of "KVBucket"
class KVBucket;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3709:5: error: no matching function for call to "checkeqfn" [clang-diagnostic-error]
    checkeq(0.0,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:94:5: note: expanded from macro "checkeq"
    checkeqfn(expected, actual, msg, __FILE__, __LINE__)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:21:13: note: candidate template ignored: deduced conflicting types for parameter "T" ("double" vs. "float")
static void checkeqfn(T exp,
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19246/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: member access into incomplete type "const KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19246/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48101/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/stats.cc(52): error C2338: EPStats size is unexpected - have you added/removed stats? ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48101/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40419/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: member access into incomplete type "const KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40419/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21526/ : FAILURE

Compile error at [2022-08-04T17:12:17.381Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: invalid use of incomplete type ?const class KVBucket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21167/ : FAILURE

Compile error at [2022-08-04T17:14:31.526Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/replicationthrottle.cc:31:42:
error: invalid use of incomplete type ?const class KVBucket?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21167/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20408/ : FAILURE

Compile error at [2022-08-04T16:10:00.054Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/stats.cc:52:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1632" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20408/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9031/ : FAILURE

Compile error at [2022-08-04T15:40:11.225Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/stats.cc:52:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9031/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22245/ : FAILURE

Compile error at [2022-08-04T17:14:34.815Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/stats.cc:52:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1632" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22245/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29554/ : FAILURE

Compile error at [2022-08-04T17:16:09.533Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/stats.cc:52:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1632" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29554/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8934/ : FAILURE

Compile error at [2022-08-04T17:09:06.012Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/stats.cc:52:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1632" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8934/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18433/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
